# dpll

./: .gitignore  CMakeLists.txt
include/: ParserCnfFile.h  dpll-pointer.h  dpll.h  dpll_optimize.h  parser.h  sudoku.h
src/: ParserCnfFile.cpp  dpll-pointer.cpp  dpll.cpp  parser.cpp  sudoku.cpp
test/: analyse.cpp  dpll-optimize-test.cpp  dpll-pointer-test.cpp  dpll-test.cpp  sudoku-test.cpp
